// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account.create returns new account action on empty current state 1`] = `
Object {
  "account": "eosio",
  "authorization": Array [
    Object {
      "actor": "accntmngr",
      "permission": "active",
    },
  ],
  "data": Object {
    "active": Object {
      "accounts": Array [
        Object {
          "permission": Object {
            "actor": "dapptoken",
            "permission": "eosio.code",
          },
          "weight": 1,
        },
      ],
      "keys": Array [
        Object {
          "key": "EOS5nYs7LDcFcVtFmnYrhYQv9Z8DPDd1r4MJ8na2MvcPPJkXwzM3x",
          "weight": 1,
        },
      ],
      "parent": "owner",
      "threshold": 2,
      "waits": Array [
        Object {
          "wait_sec": 600,
          "weight": 1,
        },
      ],
    },
    "creator": "accntmngr",
    "name": "test",
    "owner": Object {
      "accounts": Array [],
      "keys": Array [
        Object {
          "key": "EOS6z98haKv12d8vAJbDUkXmpK3PaKvf3Dv1NApo9MCxJ8oNWssDi",
          "weight": 1,
        },
      ],
      "parent": "",
      "threshold": 1,
      "waits": Array [],
    },
  },
  "name": "newaccount",
}
`;

exports[`account.updateAuth returns updateauth action when used with new permission 1`] = `
Array [
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "owner",
      },
    ],
    "data": Object {
      "account": "test",
      "auth": Object {
        "accounts": Array [],
        "keys": Array [
          Object {
            "key": "EOS6z98haKv12d8vAJbDUkXmpK3PaKvf3Dv1NApo9MCxJ8oNWssDi",
            "weight": 1,
          },
          Object {
            "key": "EOS7uSfs552n9hN1U2vidQybeP6dqx2V4qLEB5BdtEGPM3kyhGDnd",
            "weight": 1,
          },
        ],
        "parent": "",
        "threshold": 1,
        "waits": Array [],
      },
      "parent": "",
      "permission": "owner",
    },
    "name": "updateauth",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "owner",
      },
    ],
    "data": Object {
      "account": "test",
      "auth": Object {
        "accounts": Array [
          Object {
            "permission": Object {
              "actor": "dapptoken",
              "permission": "eosio.code",
            },
            "weight": 1,
          },
        ],
        "keys": Array [
          Object {
            "key": "EOS5nYs7LDcFcVtFmnYrhYQv9Z8DPDd1r4MJ8na2MvcPPJkXwzM3x",
            "weight": 1,
          },
          Object {
            "key": "EOS84UkWvuV4tM8s7ose5wwF8MReUVBCwtSJHUFMdUxBu2B2cTm32",
            "weight": 1,
          },
        ],
        "parent": "owner",
        "threshold": 3,
        "waits": Array [
          Object {
            "wait_sec": 600,
            "weight": 1,
          },
        ],
      },
      "parent": "owner",
      "permission": "active",
    },
    "name": "updateauth",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "owner",
      },
    ],
    "data": Object {
      "account": "test",
      "auth": Object {
        "accounts": Array [
          Object {
            "permission": Object {
              "actor": "test",
              "permission": "active",
            },
            "weight": 1,
          },
        ],
        "keys": Array [],
        "parent": "owner",
        "threshold": 2,
        "waits": Array [
          Object {
            "wait_sec": 1200,
            "weight": 1,
          },
        ],
      },
      "parent": "owner",
      "permission": "newnewnew",
    },
    "name": "updateauth",
  },
]
`;

exports[`account.updateBandwidth returns both delegatebw & undelegatebw action when having more NET but less CPU 1`] = `
Array [
  Object {
    "account": "eosio.token",
    "authorization": Array [
      Object {
        "actor": "fundsmngr",
        "permission": "active",
      },
    ],
    "data": Object {
      "asset": "90.0000 EOS",
      "from": "fundsmngr",
      "memo": "Fund CPU/NET staking",
      "to": "test",
    },
    "name": "transfer",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "active",
      },
    ],
    "data": Object {
      "from": "test",
      "receiver": "test",
      "unstake_cpu_quantity": "0.0000 EOS",
      "unstake_net_quantity": "80.0000 EOS",
    },
    "name": "undelegatebw",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "active",
      },
    ],
    "data": Object {
      "from": "test",
      "receiver": "test",
      "stake_cpu_quantity": "90.0000 EOS",
      "stake_net_quantity": "0.0000 EOS",
      "transfer": false,
    },
    "name": "delegatebw",
  },
]
`;

exports[`account.updateBandwidth returns single delegatebw action when having less NET/CPU 1`] = `
Array [
  Object {
    "account": "eosio.token",
    "authorization": Array [
      Object {
        "actor": "fundsmngr",
        "permission": "active",
      },
    ],
    "data": Object {
      "asset": "120.0000 EOS",
      "from": "fundsmngr",
      "memo": "Fund CPU/NET staking",
      "to": "test",
    },
    "name": "transfer",
  },
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "active",
      },
    ],
    "data": Object {
      "from": "test",
      "receiver": "test",
      "stake_cpu_quantity": "50.0000 EOS",
      "stake_net_quantity": "70.0000 EOS",
      "transfer": false,
    },
    "name": "delegatebw",
  },
]
`;

exports[`account.updateBandwidth returns single undelegatebw action when having more NET/CPU 1`] = `
Array [
  Object {
    "account": "eosio",
    "authorization": Array [
      Object {
        "actor": "test",
        "permission": "active",
      },
    ],
    "data": Object {
      "from": "test",
      "receiver": "test",
      "unstake_cpu_quantity": "100.0000 EOS",
      "unstake_net_quantity": "80.0000 EOS",
    },
    "name": "undelegatebw",
  },
]
`;

exports[`account.updateRam returns updateRam action when not enough RAM 1`] = `
Object {
  "account": "eosio",
  "authorization": Array [
    Object {
      "actor": "rammngr",
      "permission": "active",
    },
  ],
  "data": Object {
    "bytes": 154793,
    "payer": "rammngr",
    "receiver": "test",
  },
  "name": "buyrambytes",
}
`;
